[gd_scene load_steps=7 format=3 uid="uid://cv3ttwhplgav"]

[ext_resource type="Script" path="res://Scenes and Scripts/States/state_manager.gd" id="1_5rbkd"]
[ext_resource type="Script" path="res://Scenes and Scripts/States/idle.gd" id="2_yqgp7"]
[ext_resource type="Script" path="res://Scenes and Scripts/States/hovering.gd" id="3_mlo6w"]
[ext_resource type="Script" path="res://Scenes and Scripts/States/placing.gd" id="4_dval6"]
[ext_resource type="Script" path="res://Scenes and Scripts/States/deleting.gd" id="5_i41hs"]
[ext_resource type="Script" path="res://Scenes and Scripts/States/drawing.gd" id="6_qduwm"]

[node name="state_manager" type="Node"]
script = ExtResource("1_5rbkd")

[node name="idle" type="Node" parent="."]
script = ExtResource("2_yqgp7")
minimum_press_time = 0.07

[node name="minimum_press_timer" type="Timer" parent="idle"]
one_shot = true

[node name="hovering" type="Node" parent="."]
script = ExtResource("3_mlo6w")
cursor_state = 6

[node name="placing" type="Node" parent="."]
script = ExtResource("4_dval6")
cursor_state = 2

[node name="deleting" type="Node" parent="."]
script = ExtResource("5_i41hs")
cursor_state = 3

[node name="drawing" type="Node" parent="."]
script = ExtResource("6_qduwm")
cursor_state = 7

[node name="delay" type="Timer" parent="drawing"]
one_shot = true

[connection signal="timeout" from="idle/minimum_press_timer" to="idle" method="_on_minimum_press_timer_timeout"]
[connection signal="timeout" from="drawing/delay" to="drawing" method="_on_delay_timeout"]
